# archaicy

./: #alure.pxd#  .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  MANIFEST.in  README.md  alure.pxd  palace.pyx  pyproject.toml  setup.py  tox.ini  tox_droppler_result.txt
.ci/: before-build-macos  before-build-manylinux2014  repair-whl-macos
.github/: FUNDING.yml
.github/workflows/: docs.yml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree  reference.doctree
docs/_build/html/: genindex.html  objects.inv  reference.html  searchindex.js
docs/source/: conf.py  index.rst
docs/source/tutorial/: effect.rst  index.rst
doctrees/: contributing.doctree  copying.doctree  design.doctree  environment.pickle  index.doctree  installation.doctree  reference.doctree
doctrees/reference/: buffer.doctree  context.doctree  decoder.doctree  device.doctree  effect.doctree  file-io.doctree  index.doctree  source.doctree
doctrees/tutorial/: context.doctree  index.doctree  play-audio.doctree  source.doctree
examples/: palace-info.py  palace-latency.py  palace-loopback.py  palace-tonegen.py  palace-wave.py
html/: contributing.html  copying.html  design.html  genindex.html  index.html  installation.html  objects.inv  reference.html  search.html  searchindex.js
html/reference/: buffer.html  context.html  decoder.html  device.html  effect.html  file-io.html  index.html  source.html
html/tutorial/: context.html  index.html  play-audio.html  source.html
src/: alure.pxd  conf.py  palace.pyx  util.h  util.pxd
src/tutorial/: source.rst
tests/: conftest.py  test_context.py  test_listener.py
tests/functional/: test_examples.py  test_message_handling.py
tests/unit/: test_effect.py
(+1 files in other folders)
